--- a/src/components/itinerary/itinerary.css
+++ b/src/components/itinerary/itinerary.css
@@ -1,7 +1,3 @@
-.container {
-	height: calc(100% - 3.5em);
-}
-
 .itinerary-title h1 {
 	display: flex;
 	justify-content: center;
@@ -14,32 +10,41 @@
 	width: 100%;
 	padding: 0.5em;
 	box-sizing: border-box;
+
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .card {
 	height: 17em;
+	width: 100%;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+	margin-bottom: 1em;
 }
 
 .card.expand {
 	height: auto;
 }
 
+.card-content h1,
+.card-content h2,
+.card-content p {
+	text-align: left;
+	margin: 0;
+}
+
 .card-content h1 {
 	font-size: 2em;
-	text-align: left;
 }
 
 .card-content h2 {
-	margin-bottom: 0;
-	text-align: left;
 	font-size: 1.2em;
 }
 
 .card-content p {
-	text-align: left;
-	font-size: 1.2em;
-	margin: 0;
+	font-size: 1em;
 }
 
 .card-image {
@@ -55,7 +60,18 @@
 }
 .card-content-left {
 	flex: 1 1 90%;
+	text-overflow: clip;
+	white-space: nowrap;
+	overflow: hidden;
 }
+
+.card.expand .card-content-left {
+    text-overflow: initial;
+	white-space: initial;
+	overflow: initial;
+}
+
+
 .card-content-right {
 	display: flex;
 	justify-content: center;
@@ -71,6 +87,7 @@
 .card.expand .card-details {
 	display: block;
 	padding: 0.5em;
+	border-top: 1px solid rgba(102, 99, 99, 0.192);
 }
 
 .card .card-content-right .material-icons:first-of-type {
