--- a/src/components/route-details/route-details.css
+++ b/src/components/route-details/route-details.css
@@ -1,9 +1,3 @@
-.container {
-	height: 100%;
-	width: 100%;
-	top: 55%;
-}
-
 .thumbnail {
 	height: 35vh;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
